[gd_scene load_steps=4 format=3 uid="uid://bh1nljnb8bek0"]

[ext_resource type="Script" uid="uid://bwhtwg8f8jkn2" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Theme" uid="uid://bsmn25a76cmc1" path="res://themes/main_menu_theme.tres" id="2_ekxnf"]

[sub_resource type="ImageTexture" id="ImageTexture_l6cm7"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
offset_left = 25.0
offset_top = 200.0
offset_right = 325.0
offset_bottom = 596.0
theme = ExtResource("2_ekxnf")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_ekxnf")

[node name="DrumKitEditorButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Edit Drum Kit..."
icon = SubResource("ImageTexture_l6cm7")

[node name="ProfileEditorButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Edit Profiles..."
icon = SubResource("ImageTexture_l6cm7")

[node name="LoadSongButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load Test Song..."
icon = SubResource("ImageTexture_l6cm7")

[node name="ModifyArtButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Modify Art..."
icon = SubResource("ImageTexture_l6cm7")
